New runtime options for demo benchmarks